# MAEv2

./: README.md
MAEv2/: .gitignore  README.md  pyproject.toml
MAEv2/docs/final_implications/: 00_final_synthesis.md
MAEv2/docs/final_manuscript/: 02_Introduction_and_Context.md  03_Development_Methodology.md  04_Full_Theoretical_Framework.md  05_Mathematical_Formalism.md
MAEv2/docs/final_report/: 01_final_mathematical_framework.md  01_final_theoretical_framework_and_tests.md  02_siasaf_architecture_manifesto.md
MAEv2/docs/final_review/: 01_final_peer_review_of_v4.md  02_interpretive_appendix_and_faq.md  03_siasaf_final_dossier_and_roadmap.md
MAEv2/docs/phenomenology/: 01_gravitational_redshift_test.md  02_siasaf_calculation_verification_report.md  03_user_analysis_of_final_calculations.md
MAEv2/docs/project_closeout/: 02_project_conclusion_statement.md  04_siasaf_project_transfer_act.md  05_siasaf_final_project_certification.md
MAEv2/docs/project_conclusion/: 00_final_synthesis.md
MAEv2/docs/publication_strategy/: 01_siasaf_publication_manifesto.md
MAEv2/docs/theory_development/: README.md
MAEv2/notebooks/generation/: 03_theoretical_redshift_prediction.py  04_experimental_anomaly_simulation.py  generate_fig_01.py  generate_fig_02.py  generate_fig_03.py  generate_fig_04_05.py  generate_fig_06.py  generate_siasaf_fig_01.py  generate_siasaf_fig_02.py  generate_siasaf_fig_03.py  generate_siasaf_fig_04.py  generate_siasaf_fig_energy_hierarchy.py
MAEv2/papers/SAM_The_Structural_Action_Model/: 0_abstract_and_keywords.md  1_introduction.md  9_conclusions.md  (+13 more)
(+41 files in other folders)
