[tool.poetry]
name = "mae-v2"
version = "0.1.0"
description = "Research and development of the Structural Action Model (MAE)."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
scikit-learn = "^0.24.0"
pandas = "^1.3.0"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
mypy = "^0.910"
black = "^21.5b0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
